tests/paczka1/fuzzy1/82113816.err
Error in line 3: I4FZo A198 39,9
Error in line 19: Mj7Q8Pdn5d S650 26,0
Error in line 28: Mj7Q8Pdn5d A198 87,5
Error in line 23: u0Ulr77T A345 16,0
Error in line 10: bCjvqEs S650 92,9
Error in line 29: Mj7Q8Pdn5d A558 5,6
Error in line 30: u0Ulr77T A558 64,3
